--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -14,7 +14,7 @@
 {% if user.is_authenticated %}
 <div class="container" id="cont">
     <div class="col my-3">
-        <span id="title"><h2> My Awesome Cart Express Checkout - Review Your Cart items </h2></span>
+        <span id="title"><h2>Checkout - Review Your Cart items </h2></span>
         <div class="my-2">
             <ul class="list-group" id='items'>
             </ul>
