--- a/Restaurant_management_system/templates/index.html
+++ b/Restaurant_management_system/templates/index.html
@@ -13,15 +13,16 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1 class="display-4">Welcome To TSEC Food Adda</h1>
-      <p class="lead">This is an online TSEC canteen.</p>
-      <a class="btn btn-primary btn-lg" href="/shop" role="button">Student</a>
-      <a class="btn btn-primary btn-lg" href="/shop" role="button">College Staff</a>
-      <a class="btn btn-primary btn-lg" href="/admin" role="button">Admin</a>
+      
+      <h1 class="display-4" style="font-family:eczar semibold"><center> <img src="/media/shop/images/map2.png" height= "100" width="150"> Welcome To TSEC Food Adda</center></h1>
+      <h5><p class="lead"><center>This is an online TSEC canteen.</center></p> </h5><br>
+        <center><a class="btn btn-primary btn-lg" href="/shop" role="button" button style="background:green">Student</a>
+      <a class="btn btn-primary btn-lg" href="/shop" role="button" button style="background:green">College Staff</a>
+      <a class="btn btn-primary btn-lg" href="/admin" role="button" button style="background:green">Admin</a>
       <hr class="my-4">
      
       <footer>
-        <p>&copy; Company 2022-2023</p>
+        <p>&copy; Company 2023</p><center>
       </footer>
     </div>
     <!-- Optional JavaScript -->
