--- a/shop/templates/shop/basic.html
+++ b/shop/templates/shop/basic.html
@@ -33,7 +33,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/shop/about">Home</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/shop">Menu <span class="sr-only"></span></a>
           </li>
           <li class="nav-item dropdown" id="categoryList">
