--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -66,7 +66,7 @@
             <div class="alert alert-info">
               <strong>Info!</strong> COD available only for Staff.
             </div>
-            <button type="submit" class="btn btn-primary" name="onlinePay" >Online Pay</button>
+            <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_LYF1tsrSz8C6pa" async> </script> </form>
                        <button type="submit" class="btn btn-primary" name="cashOnDelivery">Cash On Delivery</button>
         </form>
         </span>
