--- a/shop/templates/shop/about.html
+++ b/shop/templates/shop/about.html
@@ -7,7 +7,7 @@
   {% load static %}
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
   <!-- Vendor CSS Files -->
   <link href="{% static 'shop/assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'shop/assets/vendor/icofont/icofont.min.css' %}" rel="stylesheet">
@@ -15,7 +15,213 @@
 
   <!-- Template Main CSS File -->
   <link href="{% static 'shop/assets/css/style.css' %}" rel="stylesheet">
+  <style>
+    .section-p1
+{
+  padding: 40px 80px;
+}
+footer
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background: grey;
+}
+.col
+{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+footer .logo
+{
+  margin-bottom: 30px;
+}
+footer h4
+{
+  font-size: 14px;
+  padding-bottom: 20px;
+}
+footer p
+{
+  font-size: 13px;
+  margin: 0 0 8px 0;
+}
+footer a
+{
+  font-size: 13px;
+  text-decoration: none;
+  color: #222;
+  margin-bottom: 10px;
+}
+footer .follow
+{
+  margin-top: 20px;
+}
+footer .follow i
+{
+  color: #465b52;
+  padding-right: 4px;
+  cursor: pointer;
+}
+footer .install .row img
+{
+  border: 1px solid #088178;
+  border-radius: 6px;
+}
+footer .install img
+{
+  margin: 10px 0 15px 0;
+}
+footer .follow i:hover,
+footer a:hover
+{
+  color: #088178;
+}
 
+  .chat-btn:hover, .submit:hover, #emoji-btn:hover{
+    opacity: 1;
+}
+#chat .chat-btn{
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
+    background: dodgerblue;
+    color: white;
+    width:60px;
+    height: 60px;
+    border-radius: 50%;
+    opacity: 0.8;
+    transition: opacity 0.3s;
+    box-shadow: 0 5px 5px rgba(0,0,0,0.4);
+}
+
+
+.chat-popup{
+    position: fixed;
+    display: none;
+    bottom:80px;
+    right:120px;
+    height: 400px;
+    width: 300px;
+    background-color: white;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0.75rem;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
+    border-radius: 10px;
+}
+
+.show{
+    display: flex;
+}
+
+.chat-area{
+    height: 80%;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.income-msg{
+    display: flex;
+    align-items: center;
+}
+
+.avatar{
+    width:45px;
+    height: 45px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.income-msg .msg{
+    background-color: dodgerblue;
+    color: white;
+    padding:0.5rem;
+    border-radius: 25px;
+    margin-left: 1rem;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.4);
+}
+
+.badge{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-color: red;
+    color:white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top:-10px;
+    right: -10px;
+}
+
+.input-area{
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+input[type="text"]{
+    width:100%;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+    border-radius: 5px;
+    height: 2.2rem;
+}
+
+#emoji-btn{
+    position: absolute;
+    font-size: 1.2rem;
+    background: transparent;
+    right: 50px;
+    top:2px;
+    opacity:0.5;
+}
+
+.submit{
+    padding: 0.25rem 0.5rem;
+    margin-left: 0.5rem;
+    background-color: green;
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    opacity: 0.7;
+}
+
+
+.out-msg{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.my-msg{
+    display: flex;
+    justify-content: flex-end;
+    margin: 0.75rem;
+    padding: 0.5rem;
+    background-color: #ddd;
+    border-radius: 25px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.4);
+    word-break: break-all;
+}
+
+
+@media (max-width:500px){
+
+    .chat-popup{
+        bottom: 120px;
+        right:10%;
+        width: 80vw;
+    }
+}
+
+    {% block css %} {% endblock %}
+  </style>
 
 
     <!-- ======= Hero Section ======= -->
@@ -29,7 +235,7 @@
 
           <!-- Slide 1 -->
           <div class="carousel-item active">
-            <div class="carousel-background"><img src="{% static 'shop/assets/img/slide/slide-1.jpg' %}" alt=""></div>
+            <div class="carousel-background"><img src="/media/shop/images/team3.png" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Welcome to <span>TSEC FOOD ADDA</span></h2>
@@ -40,7 +246,7 @@
 
           <!-- Slide 2 -->
           <div class="carousel-item">
-            <div class="carousel-background"><img src="{% static 'shop/assets/img/slide/slide-2.jpg' %}" alt=""></div>
+            <div class="carousel-background"><img src="/media/shop/images/H.png" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown mb-0">Our Motto</h2>
@@ -52,7 +258,7 @@
 
           <!-- Slide 3 -->
           <div class="carousel-item">
-            <div class="carousel-background"><img src="{% static 'shop/assets/img/slide/slide-3.jpg' %}" alt=""></div>
+            <div class="carousel-background"><img src="/media/shop/images/K.png" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h3 class="animate__animated animate__fadeInDown mb-0">COOMING SOON</h3>
@@ -217,6 +423,76 @@
       </div>
     </section><!-- End Our Team Section -->
    </main>
+   <section id="chat">
+
+    <button class="chat-btn"> 
+        <i class="material-icons"> comment </i>
+    </button>
+
+    <div class="chat-popup">
+        <div class="badge">1</div>
+        <div class="chat-area">
+         <div class="income-msg">
+             <span class="msg"> Hi, How can I help you?</span>
+         </div>   
+        </div>
+
+        <div class="input-area">
+            <input type="text">
+            <button class="submit"> <i class="material-icons"> send</i></button>
+        </div>
+    </div>
+</section>
+    
+
+            <button id="emoji-btn"> &#127773;</button>
+   <footer class="section-p1">
+    <div class="col">
+        <h4>Contact</h4>
+        <p><strong>Adress:</strong> Thadomal Shahani Engineering College, Linking Road, Bandra </p>
+        <p><strong>Phone: </strong> (+91) 9619243453</p>
+        <p><strong>Timing: </strong> 10:00 - 18:00, Mon-Sat</p>
+        <div class="follow">
+            <h4>Follow us</h4>
+            <div class="icon">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-pinterest-p"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+    </div>
+
+    <div class="col">
+        <h4>About</h4>
+        <a href="#">About us</a>
+        <a href="#">Delivery Information</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Contact us</a>
+    </div>
+    <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Sign In</a>
+        <a href="#">View Cart</a>
+        <a href="#">My Wishlist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+    </div>
+    <div class="col install">
+        <h4>Install App</h4>
+        <p>From App Store or Google Play</p>
+        <div class="row">
+            <img src="/media/shop/images/app.jpg" alt="">
+            <img src="/media/shop/images/play.jpg" alt="">
+        </div>
+        <p>Secured Payment Gateways</p>
+        <img src="/media/shop/images/pay.png" alt="">
+    </div>
+</footer>
+
+
 
 {% endblock %}
 
@@ -246,5 +522,6 @@ function updatePopover(cart) {
   <!-- Template Main JS File -->
   <script src="{% static 'shop/assets/js/main.js' %}"></script>
 
+  
 
 {% endblock %}
